@@ -27,7 +27,6 @@ import org.apache.hadoop.hive.metastore.api.MetaException;
 import org.apache.hadoop.hive.metastore.api.NotificationEvent;
 import org.apache.hadoop.hive.metastore.api.WriteEventInfo;
 import org.apache.hadoop.hive.metastore.messaging.CommitTxnMessage;
-import org.apache.hadoop.hive.metastore.messaging.json.JSONMessageEncoder;
 import org.apache.hadoop.hive.metastore.messaging.MessageBuilder;
 import org.apache.hadoop.hive.metastore.utils.StringUtils;
 import org.apache.hadoop.hive.ql.exec.repl.util.ReplUtils;
@@ -83,7 +82,7 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
 
     Path metaDataPath = new Path(withinContext.eventRoot, EximUtil.METADATA_NAME);
     // In case of ACID operations, same directory may have many other subdirectory for different write id stmt id
-    // combination. So we can not set isreplace to true.
+    // combination. So we can not set isReplace to true.
     withinContext.replicationSpec.setIsReplace(false);
     EximUtil.createExportDump(metaDataPath.getFileSystem(withinContext.hiveConf), metaDataPath,
             qlMdTable, qlPtns,
@@ -191,7 +190,7 @@ class CommitTxnHandler extends AbstractEventHandler<CommitTxnMessage> {
                   .orElse(Collections.emptyList())
                   .stream()
                   .map(StringUtils::normalizeIdentifier)
-                  .collect(Collectors.toList());
+                  .toList();
 
 //                                        Truth Table
 //     Operation                | writeIds | writeEventInfoList | databases | allWriteEventInfoExceptMV  | Output
